--- a/style.css
+++ b/style.css
@@ -1462,7 +1462,7 @@
 #MOENG img {
     width: 200px;
     height: 200px;
-    border-radius: 15px;
+    border-radius: 100%;
     border: 3px solid rgba(255, 255, 255, 0.4);
     transition: transform 0.6s ease;
 }
